--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ requires-python = ">=3.10,<3.11"
 dependencies = [
     "pydub==0.25.1",
     "simpleaudio==1.0.4",
-    "google-genai==1.23.0"
+    "google-genai==1.23.0",
+    "openai-agents[litellm]==0.1.0"
 #     "lerobot==0.1.0" # Install locally (commit 459c95197ba1114ac8c3f538786ede005598f5e9)
 ]
 
